tester/src/test/aya/failure/patterns/issue281.aya.txt
In file $FILE:5:4 ->

  3 |  | suc Nat
  4 | 
  5 | def add {a b : Nat} : Nat
          ^-^
  
Error: Unhandled case: {zero}, {suc}
Tycking interrupted due to errors.
What are you doing?
